--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
@@ -22,7 +23,9 @@
     "react-native-webrtc": "^1.100.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
+    "saga-toolkit": "^2.0.6",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
